@@ -1,5 +1,5 @@
 Package: mirt
-Version: 1.5.4
+Version: 1.5.5
 Date: 2014-04-23
 Type: Package
 Title: Multidimensional Item Response Theory
